tests/invalid/bug278.err_exp
bug278.m:032: In clause for `build_map((pred(in, out, in, out) is semidet), in,
bug278.m:032:   out, in, out)':
bug278.m:032:   mode error: argument 3 did not get sufficiently instantiated.
bug278.m:032:   Final instantiatedness of [38;5;87m`LambdaHeadVar__5'[39;49m was [38;5;203m`free',[39;49m
bug278.m:032:   expected final instantiatedness was [38;5;40m`ground'.[39;49m
bug278.m:032: In clause for predicate `build_map'/5:
bug278.m:032:   warning: variable [38;5;87m`STATE_VARIABLE_MemoTable'[39;49m [38;5;203moccurs only once[39;49m
bug278.m:032:   in this scope.
bug278.m:032:   [38;5;226m(Did you mean `!.MemoTable1'?)[39;49m
For more information, recompile with `-E'.
